modified:   package-lock.json 	modified:   package.json 	modified:   src/main.js 	modified:   src/router/index.js 	new file:   src/store/store.js 	modified:   src/views/BoardList.vue 	new file:   src/views/DetailPage.vue 	new file:   src/views/ErrorPage.vue 	modified:   src/views/TestPage.vue 	new file:   src/views/WritePage.vue 	modified:   vue.config.js

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2",
-    "vue-template-compiler": "^2.7.16"
+    "vue-template-compiler": "^2.7.16",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
